# OPFpp

./: .clang-tidy.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  CMakePresets.json  CMakePresets.json.bak  CMakeUserPresets.json  CTestTestfile.cmake  Plan for Modernizing the OPF Codebase.md  README.md  README_GNU_CMake.md  conanfile.txt  conversion_plan.md  data_structures.md  deactivate_conanbuild.bat  ecs.md  errors.txt  msys2_plan.md  pybind.profile  pythonlib_plan.md  requirements.txt  setup_ucrt64.sh  workflow.md
Testing/: TAG
Testing/20251208-2029/: Test.xml
apps/: CMakeLists.txt  opf_accuracy.cpp  opf_classify.cpp  opf_distance.cpp  opf_info.cpp  opf_knn_classify.cpp  opf_merge.cpp  opf_normalize.cpp
cmake/: FindOrInstallConan.cmake  FindOrInstallMSYS2.cmake  FindOrInstallUV.cmake  WriteCythonDeps.cmake
cpp20_check/: CMakeLists.txt  main.cpp
examples/.svn/: entries
include/: OPFpp.hpp  helloworld.h  opf.hpp  pyopf.h
include/.svn/: entries
include/opf/: GQueue.hpp  PriorityHeap.hpp  RealHeap.hpp  SNode.hpp  SgCTree.hpp  Subgraph.hpp  common.hpp  set.hpp
include/util/.svn/: entries
include_cpp/ecs/: AccuracySystem.hpp  ClassifySystem.hpp  Components.hpp  Entity.h  EntityRegistry.h  IComponent.h  IOSystem.hpp  SplitSystem.hpp  System.h  TrainSystem.hpp
include_cpp/opf/: Distance.hpp  Node.hpp  OPF.hpp  Subgraph.hpp  Utils.hpp  common.hpp  file.hpp
python/: CMakeLists.txt  opf_bindings.cpp  pyproject.toml
python/src/pyopf/: __init__.py  opf_bindings.cpp
pythonlib/: README.md  build_opfpy.md  data.py  distance.py  main.py  pyproject.toml  requirements.txt  test_data.py  test_distance.py  test_opfpy_bindings.py  test_opfpy_cython.py  test_opfpy_distance.py  test_opfpy_integration.py  test_opfpy_supervised.py  test_opfpy_unsupervised.py  test_opfpy_utilities.py  windows_runtime_helper.py
pythonlib/examples/: example1_supervised.py  example2_learning.py  example3_precomputed_distances.py  example4_normalization.py  example5_unsupervised.py  example6_semi_supervised.py
pythonlib/include/opf/: Node.hpp  Subgraph.hpp  file.hpp
pythonlib/opf/: __init__.py  _repr.py  distance.py  supervised.py  unsupervised.py  utils.py
pythonlib/opfppy/: __init__.py  distance.py  node.py  opf_class.py  subgraph.py  supervised.py  unsupervised.py  utils.py
pythonlib/src/: opfpy_cython.pxd  opfpy_cython.pyx  pybind_stub.cpp
src/: CMakeLists.txt  Distance.cpp  helloworld.cpp  main.cpp  opf_classify.cpp  opf_cluster.cpp  opf_distance.cpp  opf_fold.cpp  opf_info.cpp  opf_knn_classify.cpp  opf_learn.cpp  opf_pruning.cpp  opf_semi.cpp
src/.svn/: entries
src/opf/: GQueue.cpp  OPF.cpp  OPFpp.cpp  SNode.cpp  SgCTree.cpp  Subgraph.cpp
src/opf/common/: PriorityHeap.cpp  common.cpp  gqueue.cpp  realheap.cpp  set.cpp  sgctree.cpp  subgraph.cpp
src/opf/supervised/: opf_learn.cpp  opf_train.cpp
src/opf/unsupervised/: opf_cluster.cpp
src/util/.svn/: entries
src_cpp/: OPF.cpp  ecs_example.cpp  file.cpp  opf_accuracy.cpp  opf_classify.cpp  opf_cluster.cpp  opf_knn_classify.cpp  opf_merge.cpp  opf_normalize.cpp  opf_semi.cpp  opf_split.cpp  opf_train.cpp  pybind_stub.cpp
tests/: CMakeLists.txt  test_helloworld.cpp
tests/cpp/: CMakeLists.txt  subgraph_test.cpp  test_set.cpp
tests_cpp/: opf_test_api.h  opf_test_config.h.in  test_ecs_accuracy_system.cpp  test_ecs_classify_system.cpp  test_ecs_components.cpp  test_ecs_io_system.cpp  test_ecs_split_system.cpp  test_ecs_train_system.cpp  test_example1.cpp  test_example2.cpp  test_example3.cpp  test_example4.cpp  test_example5.cpp  test_example6.cpp
tools/: build_opfpy.sh
tools/.svn/: entries
tools/.svn/text-base/: opf_check.svn-base
tools/src/.svn/: entries
utils/: visualize_cluster.py
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
