[project]
name = "opf"
version = "0.6.0"
description = "Python API for the OPF (Optimum-Path Forest) library (C++/pybind11 backend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/leonhardrocha/OPFpp"

[tool.setuptools.packages.find]
where = ["."]
include = ["opf*"]
